--- a/app/src/main/res/layout/fragment_full_notes.xml
+++ b/app/src/main/res/layout/fragment_full_notes.xml
@@ -3,23 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color_full"
+    android:background="#FFFFFF"
     android:clickable="true"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".NotesFragment">
 
 
-    <FrameLayout
-        android:id="@+id/fragment_notes"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <FrameLayout
-        android:id="@+id/full_notes"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_gravity="center"/>
+   <TextView
+       android:id="@+id/tvNote"
+       android:textSize="30sp"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/>
 
 </LinearLayout>
