--- a/app/src/main/res/layout/fragment_full_notes.xml
+++ b/app/src/main/res/layout/fragment_full_notes.xml
@@ -5,15 +5,25 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:clickable="true"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".NotesFragment">
 
 
-   <TextView
-       android:id="@+id/tvNote"
-       android:textSize="30sp"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tvNote"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:textSize="30sp" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/back_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="50dp"
+        android:text="@string/back_btn"
+        android:textSize="@dimen/sizeText" />
 
 </LinearLayout>
