--- a/app/src/main/res/layout/fragment_full_notes.xml
+++ b/app/src/main/res/layout/fragment_full_notes.xml
@@ -22,8 +22,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="3dp"
         android:text="@string/back_btn"
+        android:textSize="@dimen/sizeText" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/popup_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="80dp"
+        android:text="@string/popup"
         android:textSize="@dimen/sizeText" />
 
 </LinearLayout>
