ДЗ 7: Создал childFragment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="sizeTextTitle">30sp</dimen>
     <dimen name="sizeText">25sp</dimen>
+    <dimen name="marginBottom">80dp</dimen>
 </resources>
