--- a/app/src/main/res/layout/fragment_full_notes_child.xml
+++ b/app/src/main/res/layout/fragment_full_notes_child.xml
@@ -8,35 +8,18 @@
     android:orientation="vertical"
     tools:context=".NotesFragment">
 
-    <FrameLayout
-        android:id="@+id/container_child"
+    <ImageView
+        android:id="@+id/full_notes_child"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/tvNote"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:textSize="30sp" />
-
+        android:layout_height="wrap_content"
+        android:layout_weight="2"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/back_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="@dimen/marginBottom"
         android:text="@string/back_btn"
         android:textSize="@dimen/sizeText" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/popup_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="80dp"
-        android:text="@string/popup"
-        android:textSize="@dimen/sizeText" />
-
 </LinearLayout>
