--- a/app/src/main/res/layout/fragment_full_notes.xml
+++ b/app/src/main/res/layout/fragment_full_notes.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/tvNote"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="2"
         android:textSize="30sp" />
@@ -26,17 +26,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="3dp"
+
         android:text="@string/back_btn"
         android:textSize="@dimen/sizeText" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/popup_btn"
+        android:id="@+id/back_exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="80dp"
-        android:text="@string/popup"
+        android:layout_marginBottom="@dimen/marginBottom"
+        android:text="@string/btn_exit"
         android:textSize="@dimen/sizeText" />
 
 </LinearLayout>
