ДЗ 9: Повесил Push Notification на кнопку "Поздороваться" в FullNotesFragment

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -12,5 +12,14 @@
         android:background="@drawable/pic"
         tools:ignore="MissingConstraints" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/hello_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="@dimen/marginBottom"
+        android:text="Поздороваться"
+        android:textSize="@dimen/sizeText" />
+
 
 </FrameLayout>
