--- a/app/src/main/res/layout/fragment_full_notes.xml
+++ b/app/src/main/res/layout/fragment_full_notes.xml
@@ -35,8 +35,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/marginBottom"
         android:text="@string/btn_exit"
+        android:textSize="@dimen/sizeText" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/hello_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="@dimen/marginBottom"
+        android:text="@string/hello"
         android:textSize="@dimen/sizeText" />
 
 </LinearLayout>
